testsuite/tests/rep-poly/T23176.stderr

T23176.hs:5:1: error:
    The binder ‘f’
    cannot be assigned a fixed runtime representation, not even by defaulting.
    Suggested fix: Add a type signature.

T23176.hs:5:1: error:
    The binder ‘f’
    cannot be assigned a fixed runtime representation, not even by defaulting.
    Suggested fix: Add a type signature.

T23176.hs:5:1: error:
    The binder ‘f’
    cannot be assigned a fixed runtime representation, not even by defaulting.
    Suggested fix: Add a type signature.

T23176.hs:6:1: error:
    The pattern binding
    cannot be assigned a fixed runtime representation, not even by defaulting.
    Suggested fix: Add a type signature.

T23176.hs:6:1: error:
    The pattern binding
    cannot be assigned a fixed runtime representation, not even by defaulting.
    Suggested fix: Add a type signature.

T23176.hs:6:1: error:
    The pattern binding
    cannot be assigned a fixed runtime representation, not even by defaulting.
    Suggested fix: Add a type signature.
